fix: NPE